--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
             <title>Giulianna Vasquez - Diseñadora Web</title>
             <link rel="stylesheet" href="style.css">
             <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Unbounded:wght@500&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+            <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"></script>
+            <meta name="viewport" content="width=device-width, user-scalable=no">
         </head>
             
         <body>
@@ -14,6 +18,7 @@
                 <div class="contenedor">
                     <div class="menu">
                         <p>GIULIANNA VASQUEZ</p>
+                        <img class="menu-icon" src="menu.png">
                         <nav>
                             <ul class="lista">
                                 <li>Sobre mí</li>
@@ -36,11 +41,11 @@
             <section>
                 <h3>Sobre mí</h3>
                 <div class="contenedor-sobremi">
-                    <img src="sobre mi.jpg" alt="no encontrado" title="Giulianna Vasquez">    
+                    <img class="imagen-sobremi" style="width: 20%" src="sobre mi.jpg" alt="no encontrado" title="Giulianna Vasquez">    
                     <div class="contenedor-parrafo-y-boton">
                         <p>Lorem Ipsum es simplemente un texto ficticio de la industria de la impresión y
                         la composición tipográfica. Lorem Ipsum ha sido el texto ficticio estándar de la 
-                        industria desde el año 1500, cuando un impresor desconocido tomó una galera de tipos y
+                        industriac desde el año 1500, cuando un impresor desconocido tomó una galera de tipos y
                         la codificó para hacer un libro de muestras tipográficas.</p> 
                         <p>Ha sobrevivido no solo cinco siglos, sino también el salto a la composición tipográfica electrónica, permaneciendo esencialmente sin cambios. </p>
                         <p>Se popularizó en la década de 1960 con el lanzamiento de hojas de Letraset que contenían pasajes de Lorem Ipsum y,
@@ -52,7 +57,7 @@
             </section>
             <section>
                 <h3>Servicios</h3>
-                <div clas="contenedor-servicios"> 
+                <div class="contenedor-servicios"> 
                     <div class="servicio violeta">
                         <h4>Diseño Web</h4>
                         <p>Lorem Ipsum es simplemente un texto ficticio de la industria de la impresión y
@@ -100,7 +105,7 @@
                            industria desde el año 1500, cuando un impresor desconocido tomó una galera de tipos y
                            la codificó para hacer un libro de muestras tipográficas
                         </p>
-                        <img src="mantenimiento.png" alt="no encontrado">
+                        <img src="mante.png" alt="no encontrado">
                     </div>
 
                     <div class="servicio celeste">
@@ -114,5 +119,117 @@
                     </div>
                 </div>
             </section>
+
+            <section>
+                <div class="contenedor">
+                <h3>Mis Trabajos</h3>
+                    <div class="owl-carousel">
+                        <div><img src="foto1.jpg" alt=""></div>
+                        <div><img src="foto2.jpg" alt=""></div>
+                        <div><img src="foto3.jpg" alt=""></div>
+                        <div><img src="foto4.jpg" alt=""></div>
+                        <div><img src="foto5.jpg" alt=""></div>
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <div class="contenedor">
+                    <h3>¿Por que trabajar conmigo?</h3>
+                    <div class="contenedor-porque">
+                        <div class="porque-singular">
+                            <img src="velocidad.png" alt="no encontrado">
+                            <h4>Velocidad</h4>
+                            <p>Lorem Ipsum es simplemente un texto ficticio de la industria de la impresión y
+                               la composición tipográfica. Lorem Ipsum ha sido el texto ficticio estándar de la 
+                               industria desde el año 1500.
+                            </p>
+                        </div>
+
+                        <div class="porque-singular">
+                            <img src="mantenimiento.png" alt="no encontrado">
+                            <h4>Mantenimiento</h4>
+                            <p>Lorem Ipsum es simplemente un texto ficticio de la industria de la impresión y
+                               la composición tipográfica. Lorem Ipsum ha sido el texto ficticio estándar de la 
+                               industria desde el año 1500.
+                            </p>
+                        </div>
+
+                        <div class="porque-singular">
+                            <img src="mobile2.png" alt="no encontrado">
+                            <h4>Mobile Priority</h4>
+                            <p>Lorem Ipsum es simplemente un texto ficticio de la industria de la impresión y
+                               la composición tipográfica. Lorem Ipsum ha sido el texto ficticio estándar de la 
+                               industria desde el año 1500.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="blog">
+                <div class="contenedor">
+                    <h3>Blog</h3>
+                    <div class="contenedor-publicaciones">
+                        <div class="publicacion">   
+                            <img src="blog1.jpg" alt="no encontrado">
+                            <h4>No alcanza con tener solamente una página Web</h4>
+                            <p>¿Quierés aprender cuales son las herramientas que usan las mejores marcas para generar tráfico?</p>
+                            <a href="">Leer más<i class="fa-thin fa-arrow-right"></i></a>
+                        </div>
+
+                        <div class="publicacion publicacion-segunda">   
+                            <img src="blog2.jpg" alt="no encontrado">
+                            <h4>¿Qué es el remarketing y como utilizarlo?</h4>
+                            <p>El remarketing es una de las técnicas más utilizadas por las mejores compañías ¿Quieres saber de que trata?</p>
+                            <a href="">Leer más<i class="fa-thin fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="que-esperas">
+                <div class="contenedor">
+                    <h3>¿Qué esperas para tener tu página web?</h3>
+                    <a href="">CHARLEMOS</a>
+                </div>
+            </section>
+
+            <section id="whatsapp">
+                <a href="https://wa.me/924050395">
+                <img src="whatsapp.png" alt="no encontrado">    
+                </a>
+            </section>
+
+
+            <script src="owlcarousel/jquery.min.js"></script>
+            <script src="owlcarousel/owl.carousel.min.js"></script>
+            <script>
+                $('.owl-carousel').owlCarousel({
+                    loop:true,
+                    margin:10,
+                    nav:true,
+                    responsive:{
+                        0:{
+                            items:1
+                        },
+                        600:{
+                            items:3
+                        },
+                        1000:{
+                            items:4
+                        }
+                    }
+                })
+
+                $('.menu-icon').click(function(){
+                $('header nav').slideToggle ();
+                })
+
+
+
+
+            </script>
+
+
         </body>
     </html>
